SFDC Automation/src/objects/Proposed_Agenda__c.object
<CustomObject>
    <description>Related to HQ Visit Object</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>Account Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjourn Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Fuels Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Review / QBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing / Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capabilities Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Maintenance Offerings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coverage / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Presenting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Web Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decisiv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Technology Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Efficient Specs/Fleet Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-board Computer/RydeSmart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>7 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 15 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Visit</label>
        <referenceTo>HQ_Visit__c</referenceTo>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Much_Time__c</fullName>
        <label>How Much Time</label>
        <picklist>
            <controllingField>Presenting__c</controllingField>
            <picklistValues>
                <fullName>15 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 hr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Confirmed__c</fullName>
        <label>Participant Confirmed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Time_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenting__c</fullName>
        <label>Presenting?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>7 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 : 45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 : 45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 15 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 : 45 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 : 15 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Proposed Agenda</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Proposed Agenda Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Agenda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>